--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="recargar"
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/recargar"
         android:title="Recargar"/>
-    <item android:id="limpiar"
+    <item android:id="@+id/limpiar"
         android:title="Limpiar"/>
 </menu>
