--- a/app/src/main/res/layout/item_pelicula.xml
+++ b/app/src/main/res/layout/item_pelicula.xml
@@ -7,7 +7,9 @@
     app:cardCornerRadius="16dp"
 
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginVertical="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,7 +19,7 @@
         <ImageView
             android:id="@+id/ivPoster"
             android:layout_width="80dp"
-            android:layout_height="120dp"
+            android:layout_height="80dp"
             android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
